--- a/.github/workflows/comment_issue.yaml
+++ b/.github/workflows/comment_issue.yaml
@@ -5,10 +5,10 @@ on:
       - opened
 
 jobs:
-  name: comment-with-issue
-  runs-on: ubuntu-latest
-  steps:
-    - name: "dump github context"
-      run: echo "${{toJSON(github.event)}}" | jq
-      shell: bash
+  comment-with-issue:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "dump github context"
+        run: echo "${{toJSON(github.event)}}" | jq
+        shell: bash
     
